package com.saraylg.matchmaker.matchmaker.exceptions;

public class InvalidJamOperationException extends RuntimeException {
    public InvalidJamOperationException(String message) {
        super(message);
    }
}

