package com.saraylg.matchmaker.matchmaker.exceptions;

public class JamNotFoundException extends RuntimeException {
    public JamNotFoundException(String message) {
        super(message);
    }
}
